--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-react-hooks": "^4.2.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.797.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "swagger-ui-express": "^4.1.5"
