--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.797.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "swagger-ui-express": "^4.1.5"
