--- a/package.json
+++ b/package.json
@@ -2,23 +2,29 @@
   "name": "dnd-express-api",
   "version": "1.0.0",
   "description": "Rest API to save dnd data",
-  "main": "index.js",
+  "main": "src/index.ts",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:api": "node --experimental-modules index.js",
+    "dev:api": "nodemon --experimental-modules src/index.ts",
     "dev:client": "npm start",
-    "dev": "npm run dev:api && npm run dev:client"
+    "dev": "npm run dev:api && npm run dev:client",
+    "build": "tsc --project ./"
   },
   "author": "Eric Chung",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.10",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "nodemon": "^2.0.6",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "aws-sdk": "^2.797.0",
