--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -24,6 +26,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.1.2"
   },
   "dependencies": {
