--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:api": "nodemon --experimental-modules src/index.ts",
+    "dev:api": "tsc src/index.ts",
     "dev:client": "npm start",
     "dev": "npm run dev:api && npm run dev:client",
     "build": "tsc --project ./"
@@ -14,8 +14,11 @@
   "author": "Eric Chung",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
+    "@types/pg": "^7.14.7",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
