--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "Rest API to save dnd data",
   "main": "src/index.ts",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:api": "cross-env NODE_ENV=dev tsc --project ./",
-    "dev:client": "node ./build/src/index.js",
+    "dev:client": "cross-env NODE_ENV=dev node ./build/src/index.js",
     "dev": "npm run dev:api && npm run dev:client",
-    "build": "cross-env NODE_ENV=production tsc --project ./"
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "author": "Eric Chung",
   "license": "ISC",
@@ -30,9 +29,12 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.6",
+    "ts-loader": "^8.0.11",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "webpack": "^5.8.0",
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "aws-sdk": "^2.799.0",
