--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:api": "cross-env NODE_ENV=dev tsc --project ./",
-    "dev:client": "cross-env NODE_ENV=dev node ./build/src/index.js",
+    "dev:api": "cross-env NODE_ENV=development tsc --project ./",
+    "dev:client": "cross-env NODE_ENV=development node ./build/src/index.js",
     "dev": "npm run dev:api && npm run dev:client",
     "build": "cross-env NODE_ENV=production webpack"
   },
@@ -14,11 +14,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
+    "@types/bluebird": "^3.5.33",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
     "@types/pg": "^7.14.7",
     "@types/swagger-ui-express": "^4.1.2",
+    "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "cross-env": "^7.0.2",
@@ -29,6 +31,9 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.6",
+    "reflect-metadata": "^0.1.13",
+    "sequelize-cli": "^6.2.0",
+    "sequelize-typescript": "^1.1.0",
     "ts-loader": "^8.0.11",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
@@ -43,6 +48,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5",
     "swagger-ui-express": "^4.1.5"
   }
 }
